<resources>
    <string name="app_name">comicslist</string>
    <string name="available">available</string>
    <string name="not_available">not available</string>
    <string name="booked">booked</string>
    <string name="edit_comic">edit comic</string>
    <string name="comic_number_cant_be_empty">the number can\'t be empty</string>
    <string name="comic_number_already_used">there\'s another comic with this number</string>
    <string name="edit_series">edit series</string>
    <string name="name">name</string>
    <string name="cancel">cancel</string>
    <string name="ok" translatable="false">ok</string>
    <string name="name_cant_be_empty">name can\'t be empty</string>
    <string name="delete">delete</string>
    <string name="delete_comic_question">delete comic?</string>
    <string name="delete_series_question">delete series?</string>
    <string name="no" translatable="false">no</string>
    <string name="yes">yes</string>
    <string name="new_comic">new comic</string>
    <string name="new_Series">new series</string>
    <string name="view_list">list</string>
    <string name="view_missing">missing list</string>
    <string name="search">search</string>
    <string name="number">number</string>
    <string name="title">title</string>
    <string name="number_of_comics">comics</string>
    <string name="backup" translatable="false">backup</string>
    <string name="add">add</string>
    <string name="edit">edit</string>
    <string name="make_backup">create backup</string>
    <string name="import_backup">import backup</string>
    <string name="export_complete">backup completed</string>
    <string name="creating_backup">creating backup…</string>
    <string name="importing_backup">importing backup…</string>
    <string name="overwrite_existing">overwrite the series that are already in the list</string>
    <string name="keep_existing">ignore the series that are already in the list</string>
    <string name="cant_read_file">can\'t read file</string>
    <string name="import_missing_data">the file has missing data</string>
    <string name="import_error_generic">an error occurred while importing</string>
    <string name="cant_write_file">an error occurred while writing to file</string>
    <string name="delete_everything_and_replace_with_backup">delete everything and replace with backup</string>
    <string name="show">show</string>
    <string name="invalid_number_error">invalid number</string>
    <string name="import_options_info">The list is not empty. How do you want to import the backup?</string>
    <string name="keep_both">keep both the existing series and the ones in the backup</string>
</resources>