<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/importOptionsRadioGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/overwriteRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overwrite_existing" />

    <RadioButton
        android:id="@+id/keepRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keep_existing" />

    <RadioButton
        android:id="@+id/ReplaceRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_everything_and_replace_with_backup" />
</RadioGroup>
