<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/ic_round_sd_storage_24"
        android:title="@string/backup"
        app:showAsAction="ifRoom|collapseActionView">
        <menu>
            <item
                android:id="@+id/menu_make_backup"
                android:icon="@drawable/ic_round_save_alt_24"
                android:title="@string/make_backup" />
            <item
                android:id="@+id/menu_import_backup"
                android:icon="@drawable/ic_round_folder_open_24"
                android:title="@string/import_backup" />
        </menu>
    </item>
</menu>